# Helikos_test

./: .gitignore  README.md  docker-compose.yml  request.json  response.json
EarthSimulation/: .dockerignore  CMakeLists.txt  Dockerfile
EarthSimulation/include/: EarthCore.hpp  EarthSim.hpp  XYZgeomag.hpp
EarthSimulation/proto/: Earth_simulation.grpc.pb.cc  Earth_simulation.pb.cc  Earth_simulation.proto
EarthSimulation/src/: EarthCore.cpp  EarthSim.cpp
EarthSimulation/tests/: EarthCoreTests.cpp
SatelliteSimulation/: CMakeLists.txt  Dockerfile
SatelliteSimulation/include/: OrbitNodes.hpp  SatSim.hpp
SatelliteSimulation/proto/: Earth_simulation.grpc.pb.h  Earth_simulation.pb.h  Earth_simulation.proto  satellite_Earth_simulation.grpc.pb.cc  satellite_Earth_simulation.grpc.pb.h  satellite_Earth_simulation.pb.cc  satellite_Earth_simulation.pb.h  satellite_Earth_simulation.proto
SatelliteSimulation/src/: OrbitNodes.cpp  SatSim.cpp
SatelliteSimulation/tests/: OrbitNodesTests.cpp
SatteliteSimulation/include/: OrbitNodes.hpp  SatSim.hpp
SatteliteSimulation/proto/: Earth_simulation.pb.h  satellite_Earth_simulation.pb.cc  satellite_Earth_simulation.pb.h
SatteliteSimulation/src/: OrbitNodes.cpp  SatSim.cpp
api/: Dockerfile  go.mod  main.go  request.json
api/proto/: Earth_simulation.pb.go  Earth_simulation_grpc.pb.go  satellite_Earth_simulation.pb.go  satellite_Earth_simulation.proto  satellite_Earth_simulation_grpc.pb.go
proto/: Earth_simulation.proto  satellite_Earth_simulaiton.proto  satellite_Earth_simulation.proto
